--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
+:root {
+  --sonjacodes-brand-color: #F53B9B;
+  --sonjacodes-brand-color-secondary: #D9D9D9;
+}
+
+body {
+  background: black;
+  margin: 50px auto;
+}
+
+.App-Container {
+  background: white;
+  border-radius: 4px;
+  min-width: 370px;
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
