continuously updating css and data input to complete weather app via react

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body {
   border-radius: 4px;
   min-width: 370px;
   padding: 10px;
-  text-align: center;
+}
+
+.SonjaCodes-logo {
+  align-items: center;
+  display: block;
+  height: 20vmin;
+  margin: 0 auto;
 }
 
