continuous updating of transferred data and css to reflect accordingly

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@ body {
   background: white;
   border-radius: 4px;
   min-width: 370px;
-  padding: 10px;
+  max-width: 960px;
+  padding: 50px;
 }
 
 .SonjaCodes-logo {
@@ -21,4 +22,3 @@ body {
   height: 20vmin;
   margin: 0 auto;
 }
-
