--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@ body {
 
 .App-Container {
   background: white;
-  border-radius: 4px;
+  border-radius: 15px;
+  box-shadow: 0 0 40px 12px rgba(222, 218, 233, 0.608);
   min-width: 370px;
   max-width: 960px;
   padding: 50px;
@@ -21,4 +22,8 @@ body {
   display: block;
   height: 20vmin;
   margin: 0 auto;
+}
+
+main {
+  padding: 30px 0;
 }
