--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,7 +1,7 @@
 footer {
   color: var(--sonjacodes-brand-color-secondary);
   font-size: 12px;
-  padding: 5px;
+  padding: 15px 0;
   text-align: center;
 }
 
