installed luxon DateTime + added current date/time to show + updated CSS

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -28,11 +28,10 @@
   font-size: 38px;
   font-weight: bold;
   line-height: 48px;
-  margin: 0;
 }
 
 .list-unstyled {
-  color: var(--sonjacodes-brand-color-secondary);
+  color: #c1c1c1;
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
