--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
   --sonjacodes-brand-color: #F53B9B;
-  --sonjacodes-brand-color-secondary: #D9D9D9;
+  --sonjacodes-brand-color-secondary: #d9d9d9;
 }
 
 body {
