--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,5 +1,5 @@
 footer {
-  color: #c1c1c1;
+  color: var(--sonjacodes-brand-color-secondary);
   font-size: 12px;
   padding: 15px 0;
   text-align: center;
