--- a/src/Weather.css
+++ b/src/Weather.css
@@ -24,14 +24,14 @@
   width: 20%;
 }
 
-.city {
+.Search h1 {
   font-size: 38px;
   font-weight: bold;
   line-height: 48px;
 }
 
 .list-unstyled {
-  color: #c1c1c1;
+  color: var(--sonjacodes-brand-color-secondary);
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
@@ -45,7 +45,7 @@
   font-size: 88px;
   font-weight: bold;
   line-height: 88px;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 .units {
