corrected css icon not working

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -41,6 +41,10 @@
   color: var(--sonjacodes-brand-color);
 }
 
+.temperatureIcon {
+  font-weight: 100;
+}
+
 .currentTemperature {
   font-size: 88px;
   font-weight: bold;
