--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,20 @@
   --sonjacodes-brand-color-secondary: #c1c1c1;
 }
 
-body {
-  background: black;
-  margin: 50px auto;
-}
-
-.container {
+.App .container {
   margin: 0 auto;
   min-width: 650px;
   max-width: 960px;
 }
 
-.App-Container {
+.App .App-Container {
   background: white;
   border-radius: 15px;
   box-shadow: 0 0 40px 12px rgba(222, 218, 233, 0.608);
   padding: 50px;
 }
 
-.SonjaCodes-logo {
+.App .SonjaCodes-logo {
   align-items: center;
   display: block;
   height: 20vmin;
