--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,58 +1,58 @@
-.search-form {
+.Weather .search-form {
   display: flex;
   justify-content: center;
   margin: 50px auto;
 
 }
 
-.search-form-input {
+.Weather .search-form-input {
   background-color: var(--sonjacodes-brand-color-secondary);
   border: none;
   border-radius: 6px;
   font-size: 16px;
   margin-right: 5px;
   padding: 15px 20px;
-  width: 80%;
+width: 80%;
 }
 
-.search-button {
+.Weather .search-button {
   background: var(--sonjacodes-brand-color);
   border: none;
   border-radius: 6px;
   color: white;
   font-size: 16px;
-  width: 20%;
+width: 20%;
 }
 
-.Search h1 {
+.Weather h1 {
   font-size: 38px;
   font-weight: bold;
   line-height: 48px;
 }
 
-.list-unstyled {
+.Weather .list-unstyled {
   color: var(--sonjacodes-brand-color-secondary);
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 400;
   line-height: 20px;
 }
 
-.list-unstyled strong {
+.Weather .list-unstyled strong {
   color: var(--sonjacodes-brand-color);
 }
 
-.temperatureIcon {
+.Weather .temperatureIcon {
   font-weight: 100;
 }
 
-.currentTemperature {
+.Weather .currentTemperature {
   font-size: 88px;
   font-weight: bold;
   line-height: 88px;
   margin-left: 10px;
 }
 
-.units {
+.Weather .units {
   font-size: 28px;
   position: relative;
 }
