replaced react-animated-weather with weather-icons-animated and adjusted the css accordingly

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -14,6 +14,10 @@
   text-transform: uppercase;
 }
 
+.forecastIcon {
+  height: 88px;
+}
+
 .forecast-temperature {
   color: var(--sonjacodes-brand-color);
   font-size: 16px;
